versions/v0.12/modules/en/pages/troubleshooting.adoc
= Troubleshooting
:revdate: 2025-07-23
:page-revdate: {revdate}

This section contains commands and tips to troubleshoot{product_name}.

[#_where_to_look_for_root_causes_of_issues]
== Where to Look for Root Causes of Issues

The first things to check when {product_name} behaves unexpectedly would be:

* `fleet-controller` logs on the management cluster: has {product_name} failed to reconcile any resource's (bundle, bundle deployment) current state with its expected state?
* `gitjob` pod logs on the management cluster: has {product_name} encountered any issue while creating jobs to generate new bundles for new commits found in monitored git repositories?
* status of the `GitRepo` for which resources are not properly deployed:
    ** How many `Ready Bundle Deployments` does it list?
    ** How many bundle deployments are listed as expected? How many do you expect to see?
        *** Keep in mind that a `GitRepo` creates a bundle per path; each bundle leads to as many bundle deployments as there are target clusters. A mismatch between `Desired Ready Clusters` and your own expectation could point to a targeting issue.
    ** Which resources are listed in the `GitRepo's` status?
    ** Which commit appears in the `GitRepo's` status?

If the issue is specific to a target cluster, users should check the Fleet agent logs on that cluster: has {product_name} failed to deploy a bundle deployment on that cluster?

The next section explains how to run all these checks.

[#_how_do_i]
== *How Do I...*

[#_fetch_the_log_from_fleet_controller]
=== Fetch the log from `fleet-controller`?

In the local management cluster where the `fleet-controller` is deployed, run the following command with your specific `fleet-controller` pod name filled in:

 `$ kubectl logs -l app=fleet-controller -n cattle-fleet-system`

[#_fetch_the_log_from_the_fleet_agent]
=== Fetch the log from the `fleet-agent`?

Go to each downstream cluster and run the following command for the local cluster with your specific `fleet-agent` pod name filled in:

[source,bash]
----
# Downstream cluster
$ kubectl logs -l app=fleet-agent -n cattle-fleet-system
# Local cluster
$ kubectl logs -l app=fleet-agent -n cattle-local-fleet-system
----

[#_fetch_detailed_error_logs_from_gitrepos_and_bundles]
=== Fetch detailed error logs from `GitRepos` and `Bundles`?

Normally, errors should appear in the Rancher UI. However, if there is not enough information displayed about the error there, you can research further by trying one or more of the following as needed:

* For more information about the bundle, click on `bundle`, and the YAML mode will be enabled.
* For more information about the GitRepo, click on `GitRepo`, then click on `View Yaml` in the upper right of the screen. After viewing the YAML, check `status.conditions`; a detailed error message should be displayed here.
* Check the `fleet-controller` for synching errors.
* Check the `fleet-agent` log in the downstream cluster if you encounter issues when deploying the bundle.

[#_fetch_detailed_status_from_gitrepos_and_bundles]
=== Fetch detailed status from `GitRepos` and `Bundles`?

For debugging and bug reports the raw JSON of the resources status fields is most useful.
This can be accessed in the Rancher UI, or through `kubectl`:

[,shell]
----
kubectl get bundle -n fleet-local fleet-agent-local -o=jsonpath={.status}
kubectl get gitrepo -n fleet-default gitrepo-name -o=jsonpath={.status}
----

To download more resources other than the spec fields:

[,shell]
----
kubectl get clusters.fleet.cattle.io -A -o=jsonpath='{range .items[*]}{.metadata.namespace}{"\t"}{.metadata.name}{"\t"}{.metadata.labels}{"\t"}{.status}{"\n"}{end}'
kubectl get bundles -A -o=jsonpath='{range .items[*]}{.metadata.namespace}{"\t"}{.metadata.name}{"\t"}{.spec.targets}{"\t"}{.status}{"\n"}{end}'
kubectl get gitrepos -A -o=jsonpath='{range .items[*]}{.metadata.namespace}{"\t"}{.metadata.name}{"\t"}{.spec.targets}{"\t"}{.status}{"\n"}{end}'
----

[#_check_a_chart_rendering_error_in_kustomize]
=== Check a chart rendering error in `Kustomize`?

Check the xref:troubleshooting.adoc#_fetch_the_log_from_fleet_controller[`fleet-controller` logs] and the xref:troubleshooting.adoc#_fetch_the_log_from_the_fleet_agent[`fleet-agent` logs].

[#_check_errors_about_watching_or_checking_out_the_gitrepo_or_about_the_downloaded_helm_repo_in_fleet_yaml]
=== Check errors about watching or checking out the `GitRepo`, or about the downloaded Helm repo in `fleet.yaml`?

Check the `gitjob-controller` logs using the following command with your specific `gitjob` pod name filled in:

 `$ kubectl logs -f $gitjob-pod-name -n cattle-fleet-system`

Note that there are two containers inside the pod: the `step-git-source` container that clones the git repo, and the `fleet` container that applies bundles based on the git repo.

The pods will usually have images named `rancher/tekton-utils` with the `gitRepo` name as a prefix. Check the logs for these Kubernetes job pods in the local management cluster as follows, filling in your specific `gitRepoName` pod name and namespace:

 `$ kubectl logs -f $gitRepoName-pod-name -n namespace`

[#_check_the_status_of_the_fleet_controller]
=== Check the status of the `fleet-controller`?

You can check the status of the `fleet-controller` pods by running the commands below:

[,bash]
----
kubectl -n cattle-fleet-system logs -l app=fleet-controller
kubectl -n cattle-fleet-system get pods -l app=fleet-controller
----

[,bash]
----
NAME                                READY   STATUS    RESTARTS   AGE
fleet-controller-64f49d756b-n57wq   1/1     Running   0          3m21s
----

[#_enable_debug_logging_for_fleet_controller_and_fleet_agent]
=== Enable debug logging for `fleet-controller` and `fleet-agent`?

Available in Rancher v2.6.3 ({product_name} v0.3.8), the ability to enable debug logging has been added.

* Go to the *Dashboard*, then click on the *local cluster* in the left navigation menu
* Select *Apps & Marketplace*, then *Installed Apps* from the dropdown
* From there, you will upgrade the {product_name} chart with the value `debug=true`. You can also set `debugLevel=5` if desired.

[#_additional_solutions_for_other_productname_issues]
== *Additional Solutions for Other {product_name} Issues*

[#_naming_conventions_for_crds]
=== Naming conventions for CRDs

. For CRD terms like `clusters` and `gitrepos`, you must reference the full CRD name. For example, the cluster CRD's complete name is `cluster.fleet.cattle.io`, and the gitrepo CRD's complete name is `gitrepo.fleet.cattle.io`.
. `Bundles`, which are created from the `GitRepo`, follow the pattern `$gitrepoName-$path` in the same workspace/namespace where the `GitRepo` was created. Note that `$path` is the path directory in the git repository that contains the `bundle` (`fleet.yaml`).
. `BundleDeployments`, which are created from the `bundle`, follow the pattern `$bundleName-$clusterName` in the namespace `clusters-$workspace-$cluster-$generateHash`. Note that `$clusterName` is the cluster to which the bundle will be deployed.

[#_http_secrets_in_github]
=== HTTP secrets in Github

When testing {product_name} with private git repositories, you will notice that HTTP secrets are no longer supported in Github. To work around this issue, follow these steps:

. Create a https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token[personal access token] in Github.
+
ifeval::["{product}" == "fleet"]
. In Rancher, create an HTTP https://ranchermanager.docs.rancher.com/how-to-guides/new-user-guides/kubernetes-resources-setup/secrets[secret] with your Github personal access token. Your username is optional.
endif::[]
+
ifeval::["{product}" == "continuous-delivery"]
. In Rancher, create an HTTP https://documentation.suse.com/cloudnative/rancher-manager/v2.12/en/security/secrets-hub.html[secret] with your Github personal access token. Your username is optional.
endif::[]
+. Use your token as the secret.

[#_productname_fails_with_bad_response_code_403]
=== {product_name} fails with bad response code: 403

If your GitJob returns the error below, the problem may be that {product_name} cannot access the Helm repo you specified in your xref:reference/ref-fleet-yaml.adoc[`fleet.yaml`]:

[source,text]
----
time="2021-11-04T09:21:24Z" level=fatal msg="bad response code: 403"
----

Perform the following steps to assess:

* Check that your repo is accessible from your dev machine, and that you can download the Helm chart successfully
* Check that your credentials for the git repo are valid

[#_helm_credentials_are_not_forwarded_when_helmrepourlregex_is_empty]
=== Helm credentials are not forwarded when `helmRepoURLRegex` is empty

If Helm credentials are configured in an auth secret but `spec.helmRepoURLRegex` is empty, {product_name} does not forward those credentials to Helm repositories.

When this happens, {product_name} logs a warning similar to:

[source,text]
----
helmRepoURLRegex is empty: Helm credentials will not be forwarded to any repository; set spec.helmRepoURLRegex to enable credential forwarding
----

To fix this issue:

* Set `spec.helmRepoURLRegex` on the `GitRepo` so it matches the Helm repository URL prefixes you trust.
* Regex matching is automatically anchored at the start of the repository URL. Use patterns with a protocol prefix, for example: `https://charts\.example\.com(/|$)`
* If you are upgrading from an older release, review auto-migrated `helmRepoURLRegex` values and tighten them if they are broader than necessary.

[#_helm_chart_repo_certificate_signed_by_unknown_authority]
=== Helm chart repo: certificate signed by unknown authority

If your GitJob returns the error below, you may have added the wrong certificate chain:

[source,text]
----
time="2021-11-11T05:55:08Z" level=fatal msg="Get \"https://helm.intra/virtual-helm/index.yaml\": x509: certificate signed by unknown authority"
----

Please verify your certificate with the following command:

[,bash]
----
context=playground-local
kubectl get secret -n fleet-default helm-repo -o jsonpath="{['data']['cacerts']}" --context $context | base64 -d | openssl x509 -text -noout
Certificate:
    Data:
        Version: 3 (0x2)
        Serial Number:
            7a:1e:df:79:5f:b0:e0:be:49:de:11:5e:d9:9c:a9:71
        Signature Algorithm: sha512WithRSAEncryption
        Issuer: C = CH, O = MY COMPANY, CN = NOP Root CA G3
...
----

[#_productname_deployment_stuck_in_modified_state]
=== {product_name} deployment stuck in modified state

When you deploy bundles to {product_name}, some of the components are modified, and this causes the "modified" flag in the {product_name} environment.

To ignore the modified flag for the differences between the Helm install generated by `fleet.yaml` and the resource in your cluster, add a `diff.comparePatches` to the `fleet.yaml` for your Deployment, as shown in this example:

[,yaml]
----
defaultNamespace: <namespace name>
helm:
  releaseName: <release name>
  repo: <repo name>
  chart: <chart name>
diff:
  comparePatches:
  - apiVersion: apps/v1
    kind: Deployment
    operations:
    - {"op":"remove", "path":"/spec/template/spec/hostNetwork"}
    - {"op":"remove", "path":"/spec/template/spec/nodeSelector"}
    jsonPointers: # jsonPointers allows to ignore diffs at certain json path
    - "/spec/template/spec/priorityClassName"
    - "/spec/template/spec/tolerations"
----

To determine which operations should be removed, observe the logs from `fleet-agent` on the target cluster. You should see entries similar to the following:

[,text]
----
level=error msg="bundle monitoring-monitoring: deployment.apps monitoring/monitoring-monitoring-kube-state-metrics modified {\"spec\":{\"template\":{\"spec\":{\"hostNetwork\":false}}}}"
----

Based on the above log, you can add the following entry to remove the operation:

[,json]
----
{"op":"remove", "path":"/spec/template/spec/hostNetwork"}
----

[#_gitrepo_or_bundle_stuck_in_modified_state]
=== `GitRepo` or `Bundle` stuck in modified state

*Modified* means that there is a mismatch between the actual state and the desired state, the source of truth, which lives in the git repository.

. Check the xref:how-tos-for-users/bundle-diffs.adoc[bundle diffs documentation] for more information.
. You can also force update the `gitrepo` to perform a manual resync. Select *GitRepo* on the left navigation bar, then select *Force Update*.

[#_bundle_has_a_horizontal_pod_autoscaler_hpa_in_modified_state]
=== Bundle has a Horizontal Pod Autoscaler (HPA) in modified state

For bundles with an HPA, the expected state is `Modified`, as the bundle contains fields that differ from the state of the Bundle at deployment - usually `ReplicaSet`.

You must define a patch in the `fleet.yaml` to ignore this field according to xref:troubleshooting.adoc#_gitrepo_or_bundle_stuck_in_modified_state[`GitRepo` or `Bundle` stuck in modified state].

Here is an example of such a patch for the deployment `nginx` in namespace `default`:

[,yaml]
----
diff:
  comparePatches:
  - apiVersion: apps/v1
    kind: Deployment
    name: nginx
    namespace: default
    operations:
    - {"op": "remove", "path": "/spec/replicas"}
----

[#_what_if_the_cluster_is_unavailable_or_is_in_a_waitcheckin_state]
=== What if the cluster is unavailable, or is in a `WaitCheckIn` state?

You will need to re-import and restart the registration process: Select *Cluster* on the left navigation bar, then select *Force Update*

[CAUTION]
====

*WaitCheckIn status for Rancher v2.5*:

ifeval::["{product}" == "fleet"]
The cluster will show in `WaitCheckIn` status because the `fleet-controller` is attempting to communicate with {product_name} using the Rancher service IP. However, {product_name} must communicate directly with Rancher via the Kubernetes service DNS using service discovery, not through the proxy. For more, see the https://ranchermanager.docs.rancher.com/getting-started/installation-and-upgrade/other-installation-methods/rancher-behind-an-http-proxy/install-rancher[Rancher docs].

endif::[]

ifeval::["{product}" == "continuous-delivery"]
The cluster will show in `WaitCheckIn` status because the `fleet-controller` is attempting to communicate with {product_name} using the Rancher service IP. However, {product_name} must communicate directly with Rancher via the Kubernetes service DNS using service discovery, not through the proxy. For more, see the https://documentation.suse.com/cloudnative/rancher-manager/v2.12/en/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.html [Rancher docs].
endif::[]
====


[#_gitrepo_complains_with_gzip_invalid_header]
=== GitRepo complains with `gzip: invalid header`

When you see an error like the one below ...

[,sh]
----
Error opening a gzip reader for /tmp/getter154967024/archive: gzip: invalid header
----

... the content of the helm chart is incorrect. Manually download the chart to your local machine and check the content.

[#_agent_is_no_longer_registered]
=== Agent is no longer registered

You can force a redeployment of an agent for a given cluster by setting `redeployAgentGeneration`.

[,sh]
----
kubectl patch clusters.fleet.cattle.io -n fleet-local local --type=json -p '[{"op": "add", "path": "/spec/redeployAgentGeneration", "value": -1}]'
----

[#_migrate_the_local_cluster_to_the_productname_default_cluster_workspace]
=== Migrate the local cluster to the {product_name} default cluster workspace?

Users can create new workspaces and move clusters across workspaces.
It's currently not possible to move the local cluster from `fleet-local` to another workspace.

[#_bundle_failed_to_deploy_resource_already_exists_error]
=== Bundle failed to deploy: "resource already exists" Error

If your bundle encounters the following error message during deployment:

[,sh]
----
not installed: rendered manifests contain a resource that already
exists. Unable to continue with install: ClusterRole "grafana-clusterrole"
in namespace "" exists and cannot be imported into the current release: invalid
ownership metadata; annotation validation error: key "meta.helm.sh/release-namespace"
must equal "ns-2": current value is "ns-1"
----

This error occurs because a Helm resource with the same `releaseName` already exists in the cluster. To resolve this issue, you need to change the `releaseName` of the resource you want to create to avoid the conflict.
